Created Contact form! Added information in all sections. Changed description and page icon.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="IMG/paw-solid.svg">
     <title>Combo Guerra</title>
 </head>
 
@@ -85,28 +86,148 @@
             </div>
         </div>
 
-        <div><!--  Experience container -->
-            <div class="section section-title" id="experience">
-                <h2>Experience</h2>
-            </div>
-
-            <div class="section-content">Experience details</div>
-        </div>
-
         <div><!--  Education container -->
             <div class="section section-title" id="education">
-                <h2>Education</h2>
+                <h2>Educación</h2>
             </div>
 
-            <div class="section section-content">Education details</div>
+            <div class="section-content">
+                <div class="trabajo"> <!--Trabajo 1:Embajador de Felicidad Canina-->
+                    <div class="titulo">
+                        <p><b>Licenciatura en Bienestar Animal y Comportamiento Canino</b></p>
+                    </div>
+                    <div class="institucion"><u>
+                            <p>Universidad de Mascotas "Patas Sabias"
+                        </u></p>
+                    </div>
+                    <div class="fecha">
+                        <p>2016 - 2018</p>
+                    </div>
+                    <div class="descripcion">
+                        <ul>
+                            <li>Especialización en Terapia Asistida con Animales.</li>
+                            <li>Curso de Comunicación y Señales Caninas.</li>
+                            <li>Programa de Socialización Avanzada.</li>
+                            <li>Proyecto de Investigación: "El Impacto de la Terapia Canina en la Recuperación de
+                                Pacientes Pediátricos".</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div><!--  Experience container -->
+            <div class="section section-title" id="experience">
+                <h2>Experiencia</h2>
+            </div>
+
+            <div class="section-content">
+                <div class="trabajo"> <!--Trabajo 1:Embajador de Felicidad Canina-->
+                    <div class="titulo">
+                        <p><b>Embajador de Felicidad Canina</b></p>
+                    </div>
+                    <div class="institucion"><u>
+                            <p>Perritos Felices S.A.
+                        </u></p>
+                    </div>
+                    <div class="fecha">
+                        <p>2020 - 2024</p>
+                    </div>
+                    <div class="descripcion">
+                        <ul>
+                            <li>Responsable de recibir a los visitantes con un alegre saludo y movimientos de cola.
+                            </li>
+                            <li>Participación activa en sesiones de terapia de mascotas, brindando consuelo y cariño
+                                a
+                                personas mayores y niños.</li>
+                            <li>Realización de demostraciones de trucos y habilidades en eventos comunitarios y
+                                escolares.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="trabajo"> <!--Trabajo 2:Modelo Canino-->
+                    <div class="titulo">
+                        <p><b>Modelo Canino</b></p>
+                    </div>
+                    <div class="institucion"><u>
+                            <p>Agencia de Modelos Perrunos "Patitas Estrella"
+                        </u></p>
+                    </div>
+                    <div class="fecha">
+                        <p>2018 - 2020</p>
+                    </div>
+                    <div class="descripcion">
+                        <ul>
+                            <li>Participación en sesiones fotográficas para catálogos de moda y productos para
+                                mascotas.</li>
+                            <li>Desfile en pasarelas caninas durante eventos de caridad y competencias de belleza.
+                            </li>
+                            <li>Colaboración en anuncios publicitarios para marcas de alimentos y accesorios para
+                                perros.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="trabajo"> <!--Trabajo 3: Asistente de Entrenamiento-->
+                    <div class="titulo">
+                        <p><b>Asistente de Entrenamiento</b></p>
+                    </div>
+                    <div class="institucion"><u>
+                            <p>Escuela Canina "Huellas de Éxito"
+                        </u></p>
+                    </div>
+                    <div class="fecha">
+                        <p>2017 - 2018</p>
+                    </div>
+                    <div class="descripcion">
+                        <ul>
+                            <li>Apoyo en sesiones de entrenamiento para cachorros, ayudando en la demostración de
+                                comandos básicos y avanzados.</li>
+                            <li>Trabajo en equipo con otros perros para mostrar comportamientos positivos y técnicas
+                                de socialización.</li>
+                            <li>Participación en eventos y seminarios de entrenamiento, ayudando a educar a los
+                                dueños de mascotas sobre el cuidado y entrenamiento adecuado.</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
         <div><!--  Projects container -->
             <div class="section section-title" id="projects">
-                <h2>Projects</h2>
+                <h2>Proyectos</h2>
             </div>
 
-            <div class="section section-content">Projects details</div>
+            <div class="section section-content">
+                <div class="section-content">
+                    <div class="trabajo"> <!--Trabajo 1:Embajador de Felicidad Canina-->
+                        <div class="titulo">
+                            <p><b>Proyecto "Sonrisas Perrunas"</b></p>
+                        </div>
+                        <div class="institucion"><u>
+                                <p>Fundación "Patas que Sanan"
+                            </u></p>
+                        </div>
+                        <div class="fecha">
+                            <p>2018 - 2024</p>
+                        </div>
+                        <div class="descripcion">
+                            <ul>
+                                <li>Participación en visitas semanales a hospitales infantiles, brindando alegría y
+                                    consuelo a los niños a través de la terapia asistida con animales.</li>
+                                <li>Colaboración en actividades lúdicas y educativas con pacientes, ayudando en su
+                                    recuperación emocional y psicológica.</li>
+                                <li>Desarrollo de lazos afectivos con los niños, mejorando su bienestar general.</li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div><!--  Contact container -->
@@ -115,16 +236,25 @@
             </div>
 
             <div class="section section-content">
-                <div class="nombre">Nombre</div>
-                <div class="correo">Correo</div>
-                <div class="mensaje">Mensaje</div>
+                <div class="form">
+                    <div class="arriba">
+                        <input class="input" id="nombre" placeholder="Nombre"></input>
+                        <input class="input" id="correo" placeholder="Correo"></input>
+                    </div>
+
+                    <input class="mensaje" id="mensaje" placeholder="Mensaje"></input>
+                    <button class="btn-enviar">Enviar</button>
+                </div>
             </div>
-
-
-
-            <div class="section section-content">Social media</div>
         </div>
+
+
+        <!-- <div class="section section-content">Social media</div> -->
+
+        <div class="footer">Sitio web creado por Claudia Guerra</div>
     </div>
+
+
 </body>
 
 </html>
