Commented the project section

--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
 
         </div>
 
-        <div><!--  Projects container -->
+        <!-- <div>  Projects container 
             <div class="section section-title" id="projects">
                 <h2>Proyectos</h2>
             </div>
 
             <div class="section section-content">
                 <div class="section-content">
-                    <div class="trabajo"> <!--Trabajo 1:Embajador de Felicidad Canina-->
+                    <div class="trabajo">Trabajo 1:Embajador de Felicidad Canina
                         <div class="titulo">
                             <p><b>Proyecto "Sonrisas Perrunas"</b></p>
                         </div>
@@ -228,7 +228,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div><!--  Contact container -->
             <div class="section section-title" id="contact">
@@ -258,5 +258,3 @@
 </body>
 
 </html>
-
-<!-- HOLAAAAA -->
