Added margin space under "Enviar" button

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="dot"></div>
                 </div>
                 <div>
-                    <img class="profile" src="img/perfil2.png" alt="Combito Bonito">
+                    <img class="profile" src="img/perfil.png" alt="Combito Bonito">
                 </div>
             </div>
             <div class="subsection">
