Changed "Work" button style to add a hyperlink

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <div class="subsection">
                 <p class="p-desc">Hola, soy Combo! Tengo un espíritu alegre y juguetón. Disfruto de los momentos de
                     tranquilidad en mi casa, descansando en mi camita.</p>
-                <div>
-                    <button class="btn-black">WORK</button>
+                <div class="botones">
+                    <button class="btn-black"><a href="#experience">WORK</a></button>
                     <button class="btn-lined">CV DOWNLOAD</button>
                 </div>
             </div>
