Removed flip card and CV Download button

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <p class="p-desc">Hola, soy Combo! Tengo un espíritu alegre y juguetón. Disfruto de los momentos de
                     tranquilidad en mi casa, descansando en mi camita.</p>
                 <div class="botones">
-                    <button class="btn-black"><a href="#experience">WORK</a></button>
-                    <button class="btn-lined">CV DOWNLOAD</button>
+                    <button class="btn-black"><a href="#experience">EXPERIENCIA</a></button>
+                    <!-- <button class="btn-lined">CV DOWNLOAD</button> -->
                 </div>
             </div>
         </div>
@@ -199,7 +199,7 @@
         </div>
 
 
-        <div>
+        <!-- <div>
             <div class="section section-title" id="experience">
                 <h2>Flip cards</h2>
             </div>
@@ -237,11 +237,11 @@
                 </div>
             </div
             
-            <!-- flip card test -->
+     
 
 
-        </div>
-        <!-- <div>  Projects container 
+        </div>-->
+        <div>  
             <div class="section section-title" id="projects">
                 <h2>Proyectos</h2>
             </div>
@@ -272,7 +272,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div> 
 
         <!-- Este es mi diseño del formulario antes del codigo de emailjs -->
         <!--  Contact container -->
@@ -326,7 +326,7 @@
         <!-- <div class="section section-content">Social media</div> -->
 
         <div class="footer">Sitio web creado por Claudia Guerra</div>
-    </div>
+    </div> -->
 
     <!-- Agregando el código de EmailJS (JavaScript) -->
     <!-- Esto se hace desde emailjs, en "playground" -->
