Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="subsection">
-                <p class="p-desc">Hello, I’m Combo! I have a cheerful and playful spirit. I enjoy peaceful moments at home, relaxing in my bed.</p>
+                <p class="p-desc">Hello, I'm Combo! I have a cheerful and playful spirit. I enjoy peaceful moments at home, relaxing in my bed.</p>
                 <div class="botones">
                     <button class="btn-black"><a href="#experience">EXPERIENCE</a></button>
                 </div>
@@ -95,15 +95,15 @@
             <div class="section-content">
                 <div class="trabajo">
                     <div class="titulo">
-                        <p><b>Bachelor’s Degree in Animal Welfare and Canine Behavior</b></p>
+                        <p><b>Bachelor's Degree in Animal Welfare and Canine Behavior</b></p>
                     </div>
                     <div class="institucion"><u><p>Wise Paws Pet University</p></u></div>
-                    <div class="fecha"><p>2016 – 2018</p></div>
+                    <div class="fecha"><p>2016 - 2018</p></div>
                     <div class="descripcion">
                         <ul>
-                            <li>Specialized in Animal-Assisted Therapy</li>
+                            <li>Specialised in Animal-Assisted Therapy</li>
                             <li>Completed course in Canine Communication and Signals</li>
-                            <li>Participated in the Advanced Socialization Program</li>
+                            <li>Participated in the Advanced Socialisation Program</li>
                             <li>Research project: "The Impact of Canine Therapy on the Recovery of Pediatric Patients"</li>
                         </ul>
                     </div>
@@ -119,7 +119,7 @@
                 <div class="trabajo">
                     <div class="titulo"><p><b>Canine Happiness Ambassador</b></p></div>
                     <div class="institucion"><u><p>Happy Puppies Inc.</p></u></div>
-                    <div class="fecha"><p>2020 – 2024</p></div>
+                    <div class="fecha"><p>2020 - 2024</p></div>
                     <div class="descripcion">
                         <ul>
                             <li>Welcomed visitors with joyful greetings and tail wags</li>
@@ -132,7 +132,7 @@
                 <div class="trabajo">
                     <div class="titulo"><p><b>Canine Model</b></p></div>
                     <div class="institucion"><u><p>Star Paws Modeling Agency</p></u></div>
-                    <div class="fecha"><p>2018 – 2020</p></div>
+                    <div class="fecha"><p>2018 - 2020</p></div>
                     <div class="descripcion">
                         <ul>
                             <li>Participated in photo sessions for fashion catalogs and pet product campaigns</li>
@@ -145,7 +145,7 @@
                 <div class="trabajo">
                     <div class="titulo"><p><b>Training Assistant</b></p></div>
                     <div class="institucion"><u><p>Success Pawprints Canine School</p></u></div>
-                    <div class="fecha"><p>2017 – 2018</p></div>
+                    <div class="fecha"><p>2017 - 2018</p></div>
                     <div class="descripcion">
                         <ul>
                             <li>Supported puppy training sessions by demonstrating basic and advanced commands</li>
@@ -166,10 +166,10 @@
                     <div class="trabajo">
                         <div class="titulo"><p><b>"Paw-smiles" Project</b></p></div>
                         <div class="institucion"><u><p>Healing Paws Foundation</p></u></div>
-                        <div class="fecha"><p>2018 – 2024</p></div>
+                        <div class="fecha"><p>2018 - 2024</p></div>
                         <div class="descripcion">
                             <ul>
-                                <li>Visited children’s hospitals weekly to bring joy and comfort through animal-assisted therapy</li>
+                                <li>Visited children's hospitals weekly to bring joy and comfort through animal-assisted therapy</li>
                                 <li>Helped in playful and educational activities with patients to support their emotional and psychological recovery</li>
                                 <li>Built strong emotional bonds with children, improving their overall well-being</li>
                             </ul>
